static/css/style.css
.main {
	padding-left: 15px; 
	padding-top: 15px; 
	padding-right: 15px;
	padding-bottom: 15px;
}
.centercontainer {
padding:auto;
margin:auto;
text-align:centre;
}
.center {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}
@media only screen and (max-width: 800px) and (min-width: 576px) {
	.nav-text {
		display: none;
	}
}
.btn {
	border: none;
	padding: 6px 6px;
	font-size: 16px;
	cursor: pointer;
};
img.rounded {
	object-fit: cover;
	border-radius: 10px;
}
hr {
	width: 60%;
}
.image_post * img, .text_post * img {
	max-width: 65%;
}

.navbar-img {
	width: 1.5em;
	height: 1.5em;
}
.fa-thumbs-up, .fa-thumbs-down, .fa-comment, .fa-edit, .fa-trash {
	color: rgb(145, 146, 153);
}
a.ratio-clicked > i {
	color: rgb(51, 71, 255);
}
.nav-link {
	padding-left: 10px;
	padding-right: 10px;
}
.nav-link * .fa-bell {
    margin-right: 4px;
}

.timestamp {
	font-size: 15px;
	color: #646464;
	text-align: right;
}
.no-highlight {
  color: inherit;
  text-decoration: inherit;
}
.comment {
	border-left: 1px solid gray;
	padding-left: 15px;
}

.theme_select {
	background-color: #5f5f5f;
	width: 80%
}
.amethyst_theme {
	background-color: #3f1d7c;
	color: #ffffff;
}
.dark_theme {
	background-color: #323232;
	color: #ffffff;
}
.light_theme {
	background-color: #ffffff;
	color: #000000;
}
.banana_theme {
	background-color: #ffee00;
	color: #6b3722;
}

